force-app/main/default/objects/LLC_BI__Document_Version__c/LLC_BI__Document_Version__c.object-meta.xml
<CustomObject>
    <description>The Version Data object stores placeholder version history.</description>
    <label>Document Version</label>
    <nameField>
        <displayFormat>DV-{0000000000}</displayFormat>
        <label>Document Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>