force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Enlarged_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enlarged_Preview_URL__c</fullName>
    <description>This field is populated automatically via formula. This field stores the contents enlarged preview url.</description>
    <formula>if(LLC_BI__File_Extension__c = &apos;png&apos; || LLC_BI__File_Extension__c = &apos;jpg&apos; || LLC_BI__File_Extension__c = &apos;jpeg&apos; || LLC_BI__File_Extension__c = &apos;bmp&apos; || LLC_BI__File_Extension__c = &apos;tiff&apos; || LLC_BI__File_Extension__c = &apos;tif&apos;,
			&quot;/sfc/servlet.shepherd/version/download/&quot;+LLC_BI__Content_Version_Id__c+&quot;?asPdf=false&amp;operationContext=CHATTER&quot;,
			&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=SVGZ&amp;versionId=&quot; + LLC_BI__Content_Version_Id__c)</formula>
    <label>Enlarged Preview URL</label>
    <type>Text</type>
</CustomField>