force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__External_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Download_URL__c</fullName>
    <description>An automatically populated download link for a file hosted on external storage.</description>
    <label>External Download URL</label>
    <type>Url</type>
</CustomField>