force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__External_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_ID__c</fullName>
    <description>An automatically populated external ID for a document stored on external storage.</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>