force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Is_External__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_External__c</fullName>
    <description>The system automatically populates this optional formula (checkbox) field to indicate that the file is stored externally to Salesforce. When true, the file is externally stored.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Storage_Type__c, &apos;External Document&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is External</label>
    <type>Checkbox</type>
</CustomField>