force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Internal__c</fullName>
    <description>The system automatically populates this optional formula (checkbox) field to indicate that the file is stored in Salesforce. When true, the file is internally stored.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Storage_Type__c, &apos;Internal Document&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>