force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Offloaded__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Offloaded__c</fullName>
    <description>An automatically populated indicator on the document version record specifying the document (and its associated metadata) has been offloaded to external storage.</description>
    <formula>IF(ISNULL(LLC_BI__Offloaded_Date__c), false, true)</formula>
    <label>Offloaded</label>
    <type>Checkbox</type>
</CustomField>