force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Placeholder_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Placeholder_Id__c</fullName>
    <description>This field is not required but is automatically populated. It is a soft reference to a placeholder.</description>
    <label>Placeholder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>