force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Preview_URL__c</fullName>
    <description>This field is populated automatically via formula. This field stores the contents preview url.</description>
    <formula>&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; + LLC_BI__Content_Version_Id__c</formula>
    <label>Preview URL</label>
    <type>Text</type>
</CustomField>