force-app/main/default/objects/LLC_BI__Document_Version__c/fields/LLC_BI__Published_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Published_Date__c</fullName>
    <description>An automatically populated time stamp on the document version record specifying when the document (and its associated metadata) was successfully published to external storage.</description>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>