force-app/main/default/objects/LLC_BI__Document_Version__c/fields/NDOC__Preview_Url_Count__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Preview_Url_Count__c</fullName>
    <description>This value represents the number of possible preview URLs that exist for the current document version.</description>
    <label>Preview Url Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>